spacing and positioning fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,11 @@
 
     a {
       text-decoration: none;
+      color: $dark-blue;
+    }
+
+    a:hover {
+      font-weight: $medium-weight;
     }
   }
 
@@ -160,9 +165,11 @@
 
       &-info {
         text-align: left;
-        margin: 280px 0 230px 160px;
+        margin: 220px 0 230px 160px;
         width: 625px;
         height: 280px;
+        margin-right: -55px;
+        z-index: 1;
       }
       &-label {
         display: flex;
@@ -193,8 +200,8 @@
           height: 100px;
           margin: 0;
           position: absolute;
-          left: 325px;
-          top: 275px;
+          left: 355px;
+          top: 245px;
         }
       }
       &-curve {
